<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friend</string>
    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ@</string>
    <string name="action_settings">Settings</string>
    
    <string name="login_qq">&#160;&#160;QQ登录</string>
    <string name="login_weixin">微信联合登录</string>
    <string name="login_phone_num">&#160;&#160;手机登录</string>
    
    <string name="input_phone_num_hint">请输入中国大陆11位手机号码</string>
    <string name="input_phone_password_hint">设置密码(8-20位数字、字母和符合的组合)</string>
    <string name="input_phone_check_num_hint">输入验证码&#160;&#160;&#160;</string>
    <string name="get_phone_check_num">获取验证码</string>
    <string name="tip_check_num">请输入验证码</string>
    <string name="tip_check_send">已发送</string>
    
    <string name="login_bundphone">绑定手机号</string>
    <string name="login_bund">立即绑定</string>
    <string name="login_register">注册</string>
    <string name="login_tip">已经注册过友借？点此</string>
    <string name="login_text">登录</string>
    
    <string name="find_password_tip_1">忘记？点此</string>
    <string name="find_password_tip_2">找回密码</string>
    
    <string name="login_register_cancel">取消</string>

    <string name="dialog_password_1">密码为8~20位，且包含数字、字母</string>
    <string name="dialog_phone_num_1">请输入有效的11位中国大陆手机号</string>
    <string name="dialog_phone_num_2">手机号码与验证码不一致</string>
    <string name="dialog_phone_register">该手机号尚未注册，请先注册</string>
    <string name="dialog_btn_ok">确定</string>
    <string name="dialog_title_1">提示</string>
    <string name="dialog_borrow_cancel">确定要放弃借款吗？</string>
    <string name="dialog_borrow_shroff">户名、银行及银行卡号需统一填写</string>

    <string name="dialog_borrow_info_1">请输入借款金额</string>
    <string name="dialog_borrow_info_1_1">借款金额必须小于等于100000元</string>
    <string name="dialog_borrow_info_2">请输入还款日期</string>
    <string name="dialog_borrow_info_2_1">输入的还款日期不正确</string>
    <string name="dialog_borrow_info_3">请输入年利率</string>
    <string name="dialog_borrow_info_3_1">输入的年利率必须小于等于24%</string>
    <string name="dialog_borrow_info_4">请输入筹款期限</string>
    <string name="dialog_borrow_info_4_1">筹款期限为1~30天</string>
    <string name="dialog_borrow_info_4_2">筹款期限必须早于还款日期</string>

    <string name="dialog_connect_1">正在链接网络</string>
    
    <string name="conn_get_info_fail">网络链接失败</string>
    
    <string name="main_table_1">有财</string>
    <string name="main_table_2">好友</string>
    <string name="main_table_3">我的</string>
    
    <string name="main_next_step">下一步</string>
    <string name="borrow_info_title">借款信息</string>
    
    <string name="borrow_info_item_1">借款金额</string>
    <string name="borrow_info_item_2">还款日期</string>
    <string name="borrow_info_item_3">年利率</string>
    <string name="borrow_info_item_4">筹款期限</string>
    <string name="borrow_info_hint_1">0.00</string>
    <string name="borrow_info_hint_2">选择还款日期</string>
    <string name="borrow_info_hint_3">亲兄弟明算账</string>
    <string name="borrow_info_hint_4">请设定筹款期限</string>
    
    <string name="borrow_interest_tip">预期利息：</string>
    <string name="borrow_yuan">元</string>
    <string name="borrow_day">天</string>
    <string name="borrow_tip_aa">实际利息从协议生效日开始计算，可能略有调整</string>
    
    <string name="borrow_reason_title">借款原因</string>
    <string name="borrow_reason_content">输入你的借款原因，可以是简单描述，也可以是宏伟的梦想</string>
    
    <string name="borrow_shroff_title">收款账号</string>
    <string name="borrow_alipay_account">支付宝账号</string>
    <string name="borrow_account_name">户名</string>
    <string name="borrow_bank_name">银行</string>
    <string name="borrow_bank_card_num">卡号</string>
    
    <string name="borrow_shroff_hint">非必填</string>
    <string name="borrow_shroff_tip">填写您的收款账户，方便好友打钱给你</string>
    
    <string name="borrow_submit_title">发起借款</string>
    <string name="borrow_submit_1">借款金额:&#160;&#160;</string>
    <string name="borrow_submit_2">还款日期:&#160;&#160;</string>
    <string name="borrow_submit_3">年利率:&#160;&#160;</string>
    <string name="borrow_submit_4">筹款截止:&#160;&#160;</string>
    <string name="borrow_submit_btn1">确认提交</string>
    <string name="borrow_submit_btn2">返回修改</string>
    
</resources>




