<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="63.0dp"
        layout="@layout/custom_title_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" 
                android:gravity="center_vertical" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/borrow_item_1"
                    android:text="@string/borrow_info_item_1"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputBorrowItem1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/yan_main_white"
                    android:gravity="right"
                    android:hint="@string/borrow_info_hint_1"
                    android:maxLength="9"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffbbbbbb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/borrow_item_2"
                    android:text="@string/borrow_info_item_2"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputBorrowItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/yan_main_white"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="right"
                    android:hint="@string/borrow_info_hint_2"
                    android:maxLength="12"
                    android:inputType="date"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffbbbbbb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/borrow_item_3"
                    android:text="@string/borrow_info_item_3"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputBorrowItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/yan_main_white"
                    android:gravity="right"
                    android:hint="@string/borrow_info_hint_3"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffbbbbbb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/borrow_item_4"
                    android:text="@string/borrow_info_item_4"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputBorrowItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/yan_main_white"
                    android:gravity="right"
                    android:hint="@string/borrow_info_hint_4"
                    android:maxLength="3"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffbbbbbb" />

            <LinearLayout
                android:id="@+id/forecastLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/forecastTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borrow_interest_tip"
                    android:textColor="#ff000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/forecastTipNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="0"
                    android:textColor="#ff00c8c9"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/forecastTipUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/borrow_yuan"
                    android:textColor="#ff000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forecastLinear12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borrow_tip_aa"
                    android:textColor="#ff000000"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnNextStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_login_btn_a"
                    android:text="@string/main_next_step"
                    android:textColor="#ffffffff"
                    android:textSize="16sp" />
            </LinearLayout>

            <DatePicker
                android:id="@+id/dpPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>