<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <!-- android:background="@drawable/login_phone_num" -->

    <include
        android:layout_width="match_parent"
        android:layout_height="63.0dp"
        layout="@layout/custom_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/yan_main_white"
                android:drawableLeft="@drawable/borrow_alipay"
                android:text="@string/borrow_alipay_account"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/inputAlipayAccount"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/yan_main_white"
                android:gravity="right"
                android:digits="@string/register_name_digits"
                android:hint="@string/borrow_shroff_hint"
                android:maxLength="60"
                android:singleLine="true"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffbbbbbb" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/yan_main_white"
                android:drawableLeft="@drawable/borrow_bank_account"
                android:text="@string/borrow_account_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/inputBankAccountName"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/yan_main_white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="right"
                android:hint="@string/borrow_shroff_hint"
                android:maxLength="60"
                android:singleLine="true"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffbbbbbb" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yan_main_white"
                    android:gravity="center|left"
                    android:text="@string/borrow_bank_name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputBankName"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/yan_main_white"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="right"
                    android:hint="@string/borrow_shroff_hint"
                    android:maxLength="36"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffbbbbbb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yan_main_white"
                    android:gravity="center|left"
                    android:text="@string/borrow_bank_card_num"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputBankCardNum"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/yan_main_white"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:gravity="right"
                    android:hint="@string/borrow_shroff_hint"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffbbbbbb" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNextStep2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/img_login_btn_a"
            android:text="@string/main_next_step"
            android:textColor="#ffffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/borrow_shroff_tip"
            android:textColor="#ff666666"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>




