<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="63.0dp"
        layout="@layout/custom_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/inputPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_phone_num"
                android:hint="@string/input_phone_num_hint"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffbbbbbb" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/inputCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/login_icon_mesg"
                android:hint="@string/input_phone_check_num_hint"
                android:maxLength="8"
                android:singleLine="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/img_login_btn_a"
                android:text="@string/get_phone_check_num"
                android:textColor="#ffffffff"
                android:textSize="12sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffbbbbbb" />

            <Button
                android:id="@+id/btnBund"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/img_login_btn_a"
                android:text="@string/login_bund"
                android:textColor="#ffffffff"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>